# repro170

./: .travis.yml  BUILD.bazel  WORKSPACE
mypkg/: BUILD.bazel
