load("@io_tweag_rules_haskell//haskell:haskell.bzl", "haskell_binary", "haskell_library")

cc_library(
    name = "cbits-indirect",
    srcs = ["cbits/impl.c"],
)

cc_library(
    name = "cbits",
    deps = ["cbits-indirect"],
)

haskell_library(
    name = "mypkg",
    srcs = ["src/MyModule.hs"],
    prebuilt_dependencies = ["base"],
    src_strip_prefix = "src",
    deps = [":cbits"],
)

haskell_binary(
    name = "mytest",
    srcs = ["test/Main.hs"],
    prebuilt_dependencies = ["base"],
    src_strip_prefix = "test",
    deps = [":mypkg"],
)
